--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "frontend-app",
   "version": "0.1.0",
+  "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
     "imports-loader": "^0.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-flickity-component": "^3.5.0",
-    "react-scripts": "3.4.0"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "react-truncate": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
