--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "proxy": "http://localhost:3001",
   "private": true,
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.13.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "flickity": "^2.2.1",
     "imports-loader": "^0.8.0",
     "qs": "^6.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-helmet": "^5.2.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "react-truncate": "^2.4.0"
+    "react-truncate": "^2.4.0",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^6.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
