--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "qs": "^6.9.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-filter-search": "^1.0.11",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
