--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-filter-search": "^1.0.11",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-truncate": "^2.4.0",
